...
                android:gravity="center"
                android:text="@string/label_no_user"
                android:visibility="@{viewModel.mIsEmpty ? View.VISIBLE : View.GONE}" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add"
            app:fabSize="normal"
            app:layout_anchor="@id/layout_user_list"
...
