<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2021 sakibeko
-->
<resources>
    <string name="app_name">PsMan</string>
    <string name="hint_service_name">サービス名</string>
    <string name="hint_user_name">ユーザ名</string>
    <string name="hint_password">パスワード</string>
    <string name="hint_password_for_confirm">パスワード(確認用)</string>
    <string name="fragment_label_user_list">一覧</string>
    <string name="fragment_label_user_edit">編集</string>
    <string name="fragment_label_user_trash">ゴミ箱</string>
    <string name="title_user_management">ユーザ管理</string>
    <string name="title_user_trash">ゴミ箱</string>
    <string name="label_no_user">ユーザが保存されていません。</string>
    <string name="label_no_trash">ゴミ箱は空です。</string>
    <string name="label_please_sign">マスターキーを設定してください。</string>
    <string name="label_please_login">ログインしてください。</string>
    <string name="info_msg_save_successful">保存しました。</string>
    <string name="info_msg_clear_trash">ゴミ箱を空にしました。</string>
    <string name="info_msg_signed">サインインに成功しました。</string>
    <string name="error_msg_retry_login">ログインからやり直してください。</string>
    <string name="error_msg_input_has_null">未入力の項目があります。</string>
    <string name="error_msg_password_short">%d文字以上で入力してください。</string>
    <string name="error_msg_password_wrong">パスワードが間違っています。</string>
    <string name="error_msg_password_mismatch">パスワードが一致していません。</string>
</resources>